--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "ajv": "^6.7.0",
+    "check-prop-types": "^1.1.2",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.8.0",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
@@ -25,8 +29,6 @@
   ],
   "devDependencies": {
     "@types/enzyme": "^3.1.15",
-    "@types/jest": "^23.3.13",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.8.0"
+    "@types/jest": "^23.3.13"
   }
 }
